--- a/gae-endp-test/gae-endp-mobile-test/res/values/strings.xml
+++ b/gae-endp-test/gae-endp-mobile-test/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">GEND Test Mobile Client</string>
+    <string name="app_name">GEND Test</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-
+    <string name="startup_url">file:///android_asset/www/index.html</string>
+    
 </resources>
