--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants_it.properties
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants_it.properties
@@ -11,3 +11,50 @@ CKDOutputView_middleRisk_text=MEDIO
 CKDOutputView_highRisk_text=ALTO
 
 CKDOutputView_veryHighRisk_text=MOLTO ALTO
+
+ExtendedView_referralDecision_None_text=No
+ExtendedView_referralDecision_Monitor_text=No, continua l&apos;osservazione clinica
+ExtendedView_referralDecision_Refer_text=Si
+ExtendedView_referralDecision_ReferWithNephrologyService_text=Confrontati con lo specialista
+
+ExtendedView_monitoringFrequency_1IfCKD_text=1 / anno se presente CKD
+ExtendedView_monitoringFrequency_1_text=1 / anno
+ExtendedView_monitoringFrequency_2_text=2 / anno
+ExtendedView_monitoringFrequency_3_text=3 / anno
+ExtendedView_monitoringFrequency_4_text=4+ / anno
+
+ProtocolStep_FinishText=Fine
+
+ProtocolStep_1_QuestionText=Hai trovato il test positivo alla striscia reattiva?
+ProtocolStep_1_Answer1Text=Si
+ProtocolStep_1_Answer2Text=No
+ProtocolStep_1_Answer2EndText=Continua con l&apos;osservazione di routine 
+
+ProtocolStep_2_QuestionText=Le urine sono torbide?
+ProtocolStep_2_Answer1Text=Si
+ProtocolStep_2_Answer1EndText=Es urine (mitto intermedio), urinocoltura ed ev. ABG: se positivo trattare l\u2019infezione
+ProtocolStep_2_Answer2Text=No
+
+ProtocolStep_3_QuestionText=Quantifica il rapporto albumina/creatinina (ACR) nelle urine
+ProtocolStep_3_Answer1Text=maggiore di 300 mg/g
+ProtocolStep_3_Answer1EndText=Aumento severo della proteinuria: invia allo specialista per valutazione (ad es. eventuale biopsia)
+ProtocolStep_3_Answer2Text=tra 30 mg/g e 300 mg/g
+ProtocolStep_3_Answer3Text=minore di 30 mg/g
+ProtocolStep_3_Answer3EndText=Continua con l&apos;osservazione di routine
+
+ProtocolStep_4_QuestionText=Necessario richiedere 2 ulteriori campioni di urine del mattino per ACR nei prossimi 2 mesi. Richiesti?
+ProtocolStep_4_Answer1Text=Si
+ProtocolStep_4_Answer2Text=No
+ProtocolStep_4_Answer2EndText=Per favore richiedi gli esami
+
+ProtocolStep_5_QuestionText=L\u2019ACR urinario &egrave; >= 30 mg/g (>= 3 mg/mmol) in almeno 1 di 2 raccolte consecutive?
+ProtocolStep_5_Answer1Text=No
+ProtocolStep_5_Answer1EndText=Continua l&apos;osservazione clinica
+ProtocolStep_5_Answer2Text=Si
+
+ProtocolStep_6_QuestionText=Ematuria?
+ProtocolStep_6_Answer1Text=Si
+ProtocolStep_6_Answer1EndText=Invia allo specialista per valutazione ad esempio eventuale biopsia
+ProtocolStep_6_Answer2Text=No
+ProtocolStep_6_Answer2EndText=Aumento moderato dell\u2019albuminuria
+
