--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants_it.properties
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/constants/AppConstants_it.properties
@@ -17,11 +17,11 @@ ExtendedView_referralDecision_Monitor_text=No, continua l&apos;osservazione clin
 ExtendedView_referralDecision_Refer_text=Si
 ExtendedView_referralDecision_ReferWithNephrologyService_text=Confrontati con lo specialista
 
-ExtendedView_monitoringFrequency_1IfCKD_text=1 / anno se presente CKD
-ExtendedView_monitoringFrequency_1_text=1 / anno
-ExtendedView_monitoringFrequency_2_text=2 / anno
-ExtendedView_monitoringFrequency_3_text=3 / anno
-ExtendedView_monitoringFrequency_4_text=4+ / anno
+ExtendedView_monitoringFrequency_1IfCKD_text=1 per anno se presente CKD
+ExtendedView_monitoringFrequency_1_text=1 per anno
+ExtendedView_monitoringFrequency_2_text=2 per anno
+ExtendedView_monitoringFrequency_3_text=3 per anno
+ExtendedView_monitoringFrequency_4_text=4+ per anno
 
 ProtocolStep_FinishText=Fine
 
