--- a/stickmail/android/res/values/strings.xml
+++ b/stickmail/android/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Stick Mail</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="startup_url">file:///android_asset/www/index.html</string>
 
 </resources>
