--- a/trunk/stickmail/android/res/values/strings.xml
+++ b/trunk/stickmail/android/res/values/strings.xml
@@ -1,9 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='utf-8'?>
 <resources>
+    <string name="app_name">StickMail</string>
+    
+    <!-- 
+    <string name="endpointApiRoot">http://10.0.2.2:8080/_ah/api</string>
+     -->
+    <string name="endpointApiRoot">https://stickmailsrv.appspot.com/_ah/api</string>
 
-    <string name="app_name">Stick Mail</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
-    <string name="startup_url">file:///android_asset/www/index.html</string>
-
+    <!--     
+    <string name="stickFacadeModuleUrl">http://127.0.0.1:8080/main/</string>
+     -->
+    <string name="stickFacadeModuleUrl">https://stickmailsrv.appspot.com/main/</string>
+    
+    <string name="stickFacadeRelativePath">.stickFacade</string>
+    
 </resources>
